Corrected the overflow style property to auto from scroll

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   padding-inline: 1rem;
   flex-grow: 1;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .card {
@@ -49,7 +49,7 @@ body {
   gap: 1.2rem;
   align-items: center;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 #search {
